changing picture and lines on Nali's intro

--- a/carrers.html
+++ b/carrers.html
@@ -84,39 +84,45 @@
     </div>
 
     <footer>
-        <div class="footerContent">
-            <div class="socialMedia">
-                <div class="top">
-                    <h2>Connect With Us!</h2>
-                    <div class="icons" id="icons">
-                        <li><a href="https://www.facebook.com/gradsmobileapp/" target="__blank"><i class="fab fa-facebook"></i></a></li>
-                        <li><a href="https://www.instagram.com/gradsmobileapp/" target="__blank"><i class="fab fa-instagram"></i></a></li>
-                        <li><a href="https://www.linkedin.com/company/grads-mobile-app/" target="__blank"><i class="fab fa-linkedin"></i></a></li>
+        <div class="footer">
+            <div class="footerContent">
+                <div class="socialMedia">
+                    <div class="top">
+                        <h2>Connect With Us!</h2>
+                        <div class="icons" id="icons">
+                            <li><a href="https://www.facebook.com/gradsmobileapp/" target="_blank"><i class="fab fa-facebook"></i></a></li>
+                            <li><a href="https://www.instagram.com/gradsmobileapp/" target="_blank"><i class="fab fa-instagram"></i></a></li>
+                            <li><a href="https://www.linkedin.com/company/grads-mobile-app/" target="_blank"><i class="fab fa-linkedin"></i></a></li>
+                        </div>
+                    <div class="bottom">
+                        <div class="hide">
+                            <h2>Download our app!</h2>
+                            <div class="download">
+                                <div class="apple"><a href="https://www.google.com/url?q=https%3A%2F%2Fapps.apple.com%2Fus%2Fapp%2Fgrads-app%2Fid1524440253&sa=D&sntz=1&usg=AOvVaw3H_wLYOKzawFdm1g1bm9Pq" target="_blank"><img src="images/apple.JPEG" alt=""></a></div>
+                                <div class="google"><a href="https://play.google.com/store/apps/details?id=com.app.grads" target="_blank"><img src="images/google.JPEG" alt=""></a></div>
+                            </div>
+                            </a>
+                        </div>
                     </div>
-                <div class="bottom">
-                    <div class="hide">
-                        <h2>Download our app!</h2>
-                        <div class="apple"><a href="https://www.google.com/url?q=https%3A%2F%2Fapps.apple.com%2Fus%2Fapp%2Fgrads-app%2Fid1524440253&sa=D&sntz=1&usg=AOvVaw3H_wLYOKzawFdm1g1bm9Pq" target="__blank"><img src="images/apple.JPEG" alt=""></a></div>
-                        <div class="google"><a href="https://play.google.com/store/apps/details?id=com.app.grads" target="__blank"><img src="images/google.JPEG" alt=""></a></div>
-                        </a>
                     </div>
                 </div>
+                <div class="getIt">
+                    <h2>Download our FREE app now!</h2>
+                    <div class="downloadIcons">
+                        <div class="apple"><a href="https://www.google.com/url?q=https%3A%2F%2Fapps.apple.com%2Fus%2Fapp%2Fgrads-app%2Fid1524440253&sa=D&sntz=1&usg=AOvVaw3H_wLYOKzawFdm1g1bm9Pq" target="_blank"><img src="images/apple.JPEG" alt="AppleStore logo for downloads"></a></div>
+                        <div class="google"><a href="https://play.google.com/store/apps/details?id=com.app.grads" target="_blank"><img src="images/google.JPEG" alt="GooglePlay logo for downloads"></a></div>
+                    </div>
+                    
                 </div>
-            </div>
-            <div class="getIt">
-                <h2>Download our FREE app now!</h2>
-                <div class="apple"><a href="https://www.google.com/url?q=https%3A%2F%2Fapps.apple.com%2Fus%2Fapp%2Fgrads-app%2Fid1524440253&sa=D&sntz=1&usg=AOvVaw3H_wLYOKzawFdm1g1bm9Pq" target="__blank"><img src="images/apple.JPEG" alt=""></a></div>
-                        <div class="google"><a href="https://play.google.com/store/apps/details?id=com.app.grads" target="__blank"><img src="images/google.JPEG" alt=""></a></div>
-            </div>
-            <div class="contact" id="contact">
-                <h2>Contact us!</h2>
-                    <li><a href="tel:6124069934">Call us: (612) 406 9934</a></li>
-                    <li><a href="mailto:nali@gradsmobileapp.com">Mail us: nali@gradsmobileapp.com</a></li>
+                <div class="contact" id="contact">
+                    <h2>Contact us!</h2>
+                        <li><a href="tel:6124069934">Call us: (612) 406 9934</a></li>
+                        <li><a href="mailto:nali@gradsmobileapp.com">Mail us: nali@gradsmobileapp.com</a></li>
+                </div>
             </div>
         </div>
-        <!-- <p class="disclaimer">
-            Thanks for visiting our site! We hope you enjoyed exploring our content as much as we enjoyed creating it. Don't forget to follow us on social media to stay up-to-date with our latest news and updates. And if you really liked what you saw, be sure to download our app from the App Store or Google Play to experience even more exclusive content and features. We appreciate your support and look forward to connecting with you!
-        </p> -->
+        <!-- <div class="redStripe"></div> -->
+        <!-- <p><a href="https://www.freepik.com/free-vector/v915-red_34378605.htm#query=footer%20background%20red&position=10&from_view=search&track=ais">Image by rawpixel.com</a> on Freepik</p> -->
     </footer>
         <!-- bootstrap for javaScript -->
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha2/dist/js/bootstrap.bundle.min.js" integrity="sha384-qKXV1j0HvMUeCBQ+QVp7JcfGl760yU08IQ+GpUo5hlbpg51QRiuqHAJz8+BrxE/N" crossorigin="anonymous"></script>
