--- a/testemonials.html
+++ b/testemonials.html
@@ -18,7 +18,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Lato&family=Open+Sans:wght@400;700&family=Oswald&family=Roboto:wght@100&family=Staatliches&display=swap" rel="stylesheet">
 
-    <title>Carrers</title>
+    <title>Events</title>
 </head>
 <body>
     <style>
@@ -35,8 +35,6 @@
             left: 0;
             width: 100%;
         }
-
-      
     </style>
 
 <header>
@@ -78,13 +76,13 @@
       </nav>
 </header>
 
-<div class="heroCareers">
-    <h2>Careers</h2>
+<div class="heroTestemonials">
+    <h2></h2>
 </div>
 
     <div class="main2">
         
-        <p>No careers at this time. Please check back later...</p>
+        <p>No testemonials at this time. Please check back later...</p>
 
         <!--
         <div class="title">
