adding images as in the bumble website

--- a/index.html
+++ b/index.html
@@ -141,6 +141,29 @@
             </div> 
         </div>
 
+        
+            <div class="mainAdvertisement">
+                <h2>Enhance Your Student Life with Grads</h2>
+                <div class="advertise">
+                        <div class="box"><img src="images/screenshot/app display/1.png" alt="">
+                            <div class="description">
+                                <p>Checkout a variety of products and services on the marketplace.</p>
+                            </div>
+                        </div>
+                        <div class="box"><img src="images/screenshot/app display/2.png" alt="">
+                            <div class="description">
+                                <p>Keep track of items and services you've listed or posted for sale.</p>
+                            </div>
+                        </div>
+                        <div class="box"><img src="images/screenshot/app display/3.png" alt="">
+                            <div class="description">
+                                <p>Contact tutoring services by texting available tutors directly!</p>
+                            </div>
+                        </div>
+                </div>
+            </div>
+        
+
         <div class="offer"><span>Special Offer:</span> Sign Up and List an Item before 6/30 to win a Starbucks Gift Card! </div>
 
         <!-- TODO: insert everything in containers like in the about section -->
