--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     
     <!-- Favicon -->
     <!-- <link rel="shortcut icon" type="image/png" href="images/favicon_io (1)/android-chrome-192x192.png"> -->
-    <link rel="shortcut icon" type="image/png" href="images/favicon_io/favicon.ico">
+    <link rel="shortcut icon" type="image/png" href="images/favicon_io new/apple-touch-icon.png">
 
     <!-- font -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
