--- a/index.html
+++ b/index.html
@@ -198,7 +198,7 @@
             <article id="studyGroupsSection">
                 <div class="left image">
                     
-                    <img src="./images/cash.jpg" alt="" class="image1">
+                    <img src="./images/new/money.jpg" alt="" class="image1">
                 </div>
                 <div class="right text">
                     <div class="red">
@@ -232,7 +232,7 @@
             </div>
             <div class="left image">
                 <!-- image -->
-                <img src="./images/cash.jpg" alt="" class="image1">
+                <img src="./images/new/money.jpg" alt="" class="image1">
             </div>
        </article>
        </div>
@@ -246,7 +246,7 @@
             <article id="studyGroupsSection">
                <div class="left image">
                    <!-- image -->
-                   <img src="./images/books.jpeg" alt="" class="couchImage">
+                   <img src="./images/new/books.jpg" alt="" class="couchImage">
                </div>
                <div class="right text">
                    <div class="black">
@@ -309,7 +309,7 @@
     <article id="studyGroupsSection">
        <div class="left image">
            <!-- image -->
-           <img src="./images/newRideShare.jpeg" alt="">
+           <img src="./images/new/carpool.jpg" alt="">
        </div>
        <div class="right text">
            <div class="black">
@@ -338,7 +338,7 @@
              </div>
              <div class="left image">
                  <!-- image -->
-                 <img src="./images/tutoring.jpeg" alt="" class="image1" style="background-size: cover;">
+                 <img src="./images/new/tutoring.jpg" alt="" class="image1" style="background-size: cover;">
              </div>
         </article>
         </div>
@@ -429,7 +429,8 @@
                 </div>
             </article> -->
 
-            <div class="logoSection"><img src="./images/newLogo.PNG" alt="" class="logo"></div>
+            <!-- <div class="logoSection"><img src="./images/newLogo.PNG" alt="" class="logo"></div> -->
+            <div class="logoSection"><img src="./images/logo.jpg" alt="" class="logo"></div>
 
             <div class="downloadSection">
                 <h2>Download our app now and sign up for free!</h2>
