needs to fix logo

--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
                                 <a href="https://play.google.com/store/apps/details?id=com.app.grads" target="_blank">Android</a>.
                         </p>
 
-                        <p style="color: rgb(0, 0, 0);">
+                        <p style="font-style: italic; font-size: smaller; ">
                             As a safety measure, an ".edu" email address is required to sign up.
                         </p>
                 </div>
