--- a/index.html
+++ b/index.html
@@ -277,7 +277,7 @@
              </div>
              <div class="left image">
                  <!-- image -->
-                 <img src="./images/sections/couch.jpeg" alt="" class="image1">
+                 <img src="./images/new/couchsurfing.jpg" alt="" class="image1">
              </div>
         </article>
         </div>
@@ -290,7 +290,7 @@
             <article id="studyGroupsSection">
                 <div class="left image">
                     <!-- image -->
-                    <img src="./images/couch.jpeg" alt="" class="image1" style="background-size: cover;">
+                    <img src="./images/new/couchsurfing.jpg" alt="" class="image1" style="background-size: cover;">
                 </div>
                 <div class="right text">
                     <div class="red">
@@ -351,7 +351,7 @@
             <article id="studyGroupsSection">
                 <div class="left image">
                     <!-- image -->
-                    <img src="./images/tutoring.jpeg" alt="" class="image1" style="background-size: cover;">
+                    <img src="./images/new/tutoring.jpg" alt="" class="image1" style="background-size: cover;">
                 </div>
                 <div class="right text">
                     <div class="red">
