--- a/index.html
+++ b/index.html
@@ -430,7 +430,7 @@
             </article> -->
 
             <!-- <div class="logoSection"><img src="./images/newLogo.PNG" alt="" class="logo"></div> -->
-            <div class="logoSection"><img src="./images/logo.jpg" alt="" class="logo"></div>
+            <div class="logoSection"><img src="./images/newlogo.png" alt="" class="logo"></div>
 
             <div class="downloadSection">
                 <h2>Download our app now and sign up for free!</h2>
