--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 <body>
     <header>
         <nav class="navbar navbar-expand-lg navbar-light">
-            <a href=""><img src="./images/newLogo.PNG" alt=""></a>
+            <a href="#"><img src="./images/newlogo.png" alt=""></a>
             
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
               <span class="navbar-toggler-icon"></span>
