--- a/testemonials.html
+++ b/testemonials.html
@@ -39,7 +39,7 @@
 
 <header>
     <nav class="navbar navbar-expand-lg navbar-light">
-        <a href="./index.html"><img src="./images/newLogo.PNG" alt=""></a>
+        <a href="./index.html"><img src="./images/newlogo.png" alt=""></a>
         
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
