--- a/index.html
+++ b/index.html
@@ -250,9 +250,10 @@
                </div>
                <div class="right text">
                    <div class="black">
-                    <h2>EXTRA FOOD?</h2>
+                    <h2>Extra Food?</h2>
                     <p>SELL TO ANOTHER STUDENT!</p>
-                    <h2>USED TEXTBOOKS AND NOTES?</h2>
+                    
+                    <h2>Used Textbooks And Notes?</h2>
                     <p>SELL TO ANOTHER STUDENT!</p>
                    </div>
                </div>
