--- a/index.html
+++ b/index.html
@@ -122,8 +122,8 @@
                                 <a href="https://play.google.com/store/apps/details?id=com.app.grads" target="_blank">Android</a>.
                         </p>
 
-                        <p style="font-style: italic; font-size: smaller; ">
-                            As a safety measure, an ".edu" email address is required to sign up.
+                        <p style="font-style: italic; ">
+                            (As a safety measure, an ".edu" email address is required to sign up.)
                         </p>
                 </div>
         
@@ -523,4 +523,3 @@
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
 </body>
 </html>
-
