--- a/carrers.html
+++ b/carrers.html
@@ -12,7 +12,7 @@
     <link rel="stylesheet" href="style.css">
 
     <!-- favicon  -->
-    <link rel="shortcut icon" type="image/png" href="images/favicon_io new/apple-touch-icon.png">
+    <link rel="shortcut icon" type="image/png" href="./images/favicon_io/apple-touch-icon.png">
     <!-- font -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
