--- a/index.html
+++ b/index.html
@@ -16,7 +16,9 @@
     
     <!-- Favicon -->
     <!-- <link rel="shortcut icon" type="image/png" href="images/favicon_io (1)/android-chrome-192x192.png"> -->
-    <link rel="shortcut icon" type="image/png" href="images/favicon_io new/apple-touch-icon.png">
+    <link rel="shortcut icon" type="image/png" href="./images/favicon_io/apple-touch-icon.png">
+
+
 
     <!-- font -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -123,7 +125,7 @@
                                 <a href="https://play.google.com/store/apps/details?id=com.app.grads" target="_blank">Android</a>.
                         </p>
 
-                        <p style="font-style: italic; ">
+                        <p style="font-style: italic;">
                             (As a safety measure, an ".edu" email address is required to sign up.)
                         </p>
                 </div>
