--- a/index.html
+++ b/index.html
@@ -16,7 +16,8 @@
     
     <!-- Favicon -->
     <!-- <link rel="shortcut icon" type="image/png" href="images/favicon_io (1)/android-chrome-192x192.png"> -->
-    <link rel="shortcut icon" type="image/png" href="./images/favicon_io/apple-touch-icon.png">
+    <!-- <link rel="shortcut icon" type="image/png" href="./images/favicon_io/apple-touch-icon.png"> -->
+    <link rel="shortcut icon" type="image/png" href="/images/favicon_io/apple-touch-icon.png">
 
 
 
