--- a/index.html
+++ b/index.html
@@ -151,17 +151,17 @@
             <div class="mainAdvertisement">
                 <h2>Enhance Your Student Life with Grads</h2>
                 <div class="advertise">
-                        <div class="box"><img src="images/screenshot/app display/1.png" alt="">
+                        <div class="box"><img src="images/screenshot/app display/11.png" alt="">
                             <div class="description">
                                 <p>Checkout a variety of products and services on the marketplace.</p>
                             </div>
                         </div>
-                        <div class="box"><img src="images/screenshot/app display/2.png" alt="">
+                        <div class="box"><img src="images/screenshot/app display/22.png" alt="">
                             <div class="description">
                                 <p>Keep track of items and services you've listed or posted for sale.</p>
                             </div>
                         </div>
-                        <div class="box"><img src="images/screenshot/app display/3.png" alt="">
+                        <div class="box"><img src="images/screenshot/app display/33.png" alt="">
                             <div class="description">
                                 <p>Contact tutoring services by texting available tutors directly!</p>
                             </div>
@@ -177,7 +177,7 @@
                  <article id="studyGroupsSection">
                     <div class="left image">
                         <!-- image -->
-                        <img src="./images/study.jpg" alt="">
+                        <img src="./images/study1.jpg" alt="">
                     </div>
                     <div class="right text">
                         <div class="black">
@@ -202,7 +202,7 @@
             <article id="studyGroupsSection">
                 <div class="left image">
                     
-                    <img src="./images/new/money.jpg" alt="" class="image1">
+                    <img src="./images/new/money1.jpg" alt="" class="image1">
                 </div>
                 <div class="right text">
                     <div class="red">
@@ -236,7 +236,7 @@
             </div>
             <div class="left image">
                 <!-- image -->
-                <img src="./images/new/money.jpg" alt="" class="image1">
+                <img src="./images/new/money1.jpg" alt="" class="image1">
             </div>
        </article>
        </div>
@@ -250,7 +250,7 @@
             <article id="studyGroupsSection">
                <div class="left image">
                    <!-- image -->
-                   <img src="./images/new/books.jpg" alt="" class="couchImage">
+                   <img src="./images/new/books1.jpg" alt="" class="couchImage">
                </div>
                <div class="right text">
                    <div class="black">
@@ -282,7 +282,7 @@
              </div>
              <div class="left image">
                  <!-- image -->
-                 <img src="./images/new/couchsurfing.jpg" alt="" class="image1">
+                 <img src="./images/new/couchsurfing1.jpg" alt="" class="image1">
              </div>
         </article>
         </div>
@@ -295,7 +295,7 @@
             <article id="studyGroupsSection">
                 <div class="left image">
                     <!-- image -->
-                    <img src="./images/new/couchsurfing.jpg" alt="" class="image1" style="background-size: cover;">
+                    <img src="./images/new/couchsurfing1.jpg" alt="" class="image1" style="background-size: cover;">
                 </div>
                 <div class="right text">
                     <div class="red">
@@ -314,7 +314,7 @@
     <article id="studyGroupsSection">
        <div class="left image">
            <!-- image -->
-           <img src="./images/new/carpool.jpg" alt="">
+           <img src="./images/new/carpool1.jpg" alt="">
        </div>
        <div class="right text">
            <div class="black">
@@ -343,7 +343,7 @@
              </div>
              <div class="left image">
                  <!-- image -->
-                 <img src="./images/new/tutoring.jpg" alt="" class="image1" style="background-size: cover;">
+                 <img src="./images/new/tutoring1.jpg" alt="" class="image1" style="background-size: cover;">
              </div>
         </article>
         </div>
