--- a/events.html
+++ b/events.html
@@ -30,7 +30,7 @@
         }
 
         footer {
-            position: absolute;
+            /* position: absolute; */
             bottom: 0;
             left: 0;
             width: 100%;
