small change 'an'

--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
                 <div class="content">
                     <h2>What is Grads?</h2>
                     
-                    <p>Grads is a <strong>FREE,</strong> secure and accessible marketplace mobile <strong>APP</strong> for all students.
+                    <p>Grads is a <strong>FREE,</strong> secure and an accessible marketplace mobile <strong>APP</strong> for all students.
                         <!-- Students can not only find the products and services they need
                         but also profit from the platform
                         by listing items for sale, apartments or couches for rent, or any other services they can provide.-->
