--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <!-- Favicon -->
     <!-- <link rel="shortcut icon" type="image/png" href="images/favicon_io (1)/android-chrome-192x192.png"> -->
     <!-- <link rel="shortcut icon" type="image/png" href="./images/favicon_io/apple-touch-icon.png"> -->
-    <link rel="shortcut icon" type="image/png" href="/images/favicon_io/apple-touch-icon.png">
+    <link rel="shortcut icon" type="image/png" href="./images/favicon_io/apple-touch-icon.png">
 
 
 
