--- a/index.html
+++ b/index.html
@@ -19,8 +19,6 @@
     <!-- <link rel="shortcut icon" type="image/png" href="./images/favicon_io/apple-touch-icon.png"> -->
     <link rel="shortcut icon" type="image/png" href="./images/favicon_io/apple-touch-icon.png">
 
-
-
     <!-- font -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -33,7 +31,7 @@
     <header>
         <nav class="navbar navbar-expand-lg navbar-light">
             <!-- <a href="#"><img src="/images/newlogo.png" alt=""></a> -->
-            <a href="#"><img src="./images/newLogo.png" alt=""></a>
+            <a href="#"><img src="/images/newLogo.png" alt=""></a>
             
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
               <span class="navbar-toggler-icon"></span>
@@ -134,7 +132,7 @@
                 
             </div>
             <div class="right">
-                <div class="container full-width">
+                <div class="container full-width studentsImageContainer">
                     <div class="row">
                             <!-- <a href="images/screenshot/image1.PNG" target="_blank"><img src="images/screenshot/image1.PNG" alt=""></a>
                             <a href="images/screenshot/image2.PNG" target="_blank"><img src="images/screenshot/image2.PNG" alt=""></a>
@@ -435,7 +433,7 @@
             </article> -->
 
             <!-- <div class="logoSection"><img src="./images/newLogo.PNG" alt="" class="logo"></div> -->
-            <div class="logoSection"><img src="./images/newLogo.png" alt="" class="logo"></div>
+            <div class="logoSection"><img src="/images/newLogo.png" alt="" class="logo"></div>
 
             <div class="downloadSection">
                 <h2>Download our app now and sign up for free!</h2>
