--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
             <div class="left">
 
                 <div class="content">
-                    <h2>What is Grads?</h2>
+                    <h2>hat is Grads?</h2>
                     
                     <p>Grads is a <strong>FREE,</strong> secure and an accessible virtual marketplace for all students.
                         <!-- Students can not only find the products and services they need
@@ -434,6 +434,7 @@
 
             <!-- <div class="logoSection"><img src="./images/newLogo.PNG" alt="" class="logo"></div> -->
             <div class="logoSection"><img src="/images/newLogo.png" alt="" class="logo"></div>
+
 
             <div class="downloadSection">
                 <h2>Download our app now and sign up for free!</h2>
