--- a/index.html
+++ b/index.html
@@ -31,7 +31,8 @@
     <header>
         <nav class="navbar navbar-expand-lg navbar-light">
             <!-- <a href="#"><img src="/images/newlogo.png" alt=""></a> -->
-            <a href="#"><img src="/images/newLogo.png" alt=""></a>
+            <!-- <a href="#"><img src="/images/newLogo.png" alt=""></a> -->
+            <a href="#"><img src="./newLogo.PNG" alt=""></a>
             
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
               <span class="navbar-toggler-icon"></span>
@@ -109,7 +110,7 @@
             <div class="left">
 
                 <div class="content">
-                    <h2>hat is Grads?</h2>
+                    <h2>What is Grads?</h2>
                     
                     <p>Grads is a <strong>FREE,</strong> secure and an accessible virtual marketplace for all students.
                         <!-- Students can not only find the products and services they need
@@ -433,7 +434,10 @@
             </article> -->
 
             <!-- <div class="logoSection"><img src="./images/newLogo.PNG" alt="" class="logo"></div> -->
-            <div class="logoSection"><img src="/images/newLogo.png" alt="" class="logo"></div>
+            <div class="logoSection">
+                <!-- <img src="./images/newLogo.png" alt="" class="logo"> -->
+                <img src="/images/newLogo.png" alt="" class="logo">
+            </div>
 
 
             <div class="downloadSection">
