fixing png logo

--- a/index.html
+++ b/index.html
@@ -436,7 +436,7 @@
             <!-- <div class="logoSection"><img src="./images/newLogo.PNG" alt="" class="logo"></div> -->
             <div class="logoSection">
                 <!-- <img src="./images/newLogo.png" alt="" class="logo"> -->
-                <img src="./newLogo.png" alt="" class="logo">
+                <img src="./newLogo.PNG" alt="" class="logo">
             </div>
 
 
