--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
     <!-- <link rel="shortcut icon" type="image/png" href="./images/favicon_io/apple-touch-icon.png"> -->
     <!-- <link rel="shortcut icon" type="image/png" href="./images/favicon_io/apple-touch-icon.png"> -->
     <link rel="shortcut icon" href="./images/favicon_io/apple-touch-icon.png" type="image/x-icon">
+    <link rel="shortcut icon" href="./images/favicon_io/apple-touch-icon.png" type="image/x-icon">
 
     <!-- font -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
