--- a/news.html
+++ b/news.html
@@ -41,7 +41,7 @@
 
 <header>
     <nav class="navbar navbar-expand-lg navbar-light">
-        <a href="./index.html"><img src="./images/newLogo.png" alt=""></a>
+        <a href="./index.html"><img src="newLogo.PNG" alt=""></a>
         
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
