--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
     <!-- <link rel="shortcut icon" type="image/png" href="images/favicon_io (1)/android-chrome-192x192.png"> -->
     <!-- <link rel="shortcut icon" type="image/png" href="./images/favicon_io/apple-touch-icon.png"> -->
     <!-- <link rel="shortcut icon" type="image/png" href="./images/favicon_io/apple-touch-icon.png"> -->
-    <link rel="shortcut icon" href="./images/favicon_io/apple-touch-icon.png" type="image/x-icon">
-    <link rel="shortcut icon" href="./images/favicon_io/apple-touch-icon.png" type="image/x-icon">
+    <!-- <link rel="shortcut icon" href="/images/favicon_io/apple-touch-icon.png" type="image/x-icon"> -->
+    <link rel="shortcut icon" href="/images/favicon_io/apple-touch-icon.png" type="image/png">
 
     <!-- font -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
